update JudgeDraftOrderAboutToSubmitHandler