@@ -4,7 +4,12 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.mockito.InOrder;
 import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.finrem.caseorchestration.ccd.callback.CallbackType;
@@ -29,25 +34,23 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.service.documentcatergory.Up
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.function.BiFunction;
 import java.util.function.Function;
+import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.AUTH_TOKEN;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.CASE_ID;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.TestSetUpUtils.caseDocument;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.test.Assertions.assertCanHandle;
 
 @ExtendWith(MockitoExtension.class)
 class JudgeDraftOrderAboutToSubmitHandlerTest {
-
-    private static final String FILE_URL = "http://dm:80/documents/kbjh87y8y9JHVKKKJVJ";
-    private static final String FILE_BINARY_URL = "http://dm:80/documents/kbjh87y8y9JHVKKKJVJ/binary";
-    private static final String FILE_NAME = "abc.pdf";
 
     private JudgeDraftOrderAboutToSubmitHandler handler;
     @Mock
@@ -63,17 +66,20 @@ class JudgeDraftOrderAboutToSubmitHandlerTest {
     @Spy
     private ObjectMapper objectMapper;
 
+    private InOrder inOrder;
+
     @BeforeEach
     void setUp() {
         FinremCaseDetailsMapper finremCaseDetailsMapper = new FinremCaseDetailsMapper(objectMapper);
         handler = new JudgeDraftOrderAboutToSubmitHandler(
-                finremCaseDetailsMapper,
+            finremCaseDetailsMapper,
             hearingOrderService,
             genericDocumentService,
             contestedOrderApprovedLetterService,
             uploadedDraftOrderCategoriser,
             documentWarningsHelper
         );
+        inOrder = Mockito.inOrder(hearingOrderService, genericDocumentService, uploadedDraftOrderCategoriser, contestedOrderApprovedLetterService);
     }
 
     @Test
@@ -83,8 +89,7 @@ class JudgeDraftOrderAboutToSubmitHandlerTest {
 
     @Test
     void givenDraftOrderUploaded_whenDocumentWarningDetected_thenPopulateWarnings() {
-        //No additional Documents
-        FinremCallbackRequest callbackRequest = setupTestData(Collections.emptyList());
+        FinremCallbackRequest callbackRequest = setupTestDataWithoutAdditionalDocs();
 
         when(documentWarningsHelper.getDocumentWarnings(eq(callbackRequest), any(Function.class), eq(AUTH_TOKEN)))
             .thenReturn(List.of("warnings 1"));
@@ -97,78 +102,131 @@ class JudgeDraftOrderAboutToSubmitHandlerTest {
     }
 
     @Test
-    void givenNoAdditionalDocuments_whenHandle_thenAllInvocationsAreExecuted() {
-        //No additional Documents
-        FinremCallbackRequest callbackRequest = setupTestData(Collections.emptyList());
+    void givenApprovedOrdersProvided_whenHandle_thenMoveToDraftDirectionOrderCollection() {
+        List<DraftDirectionOrderCollection> uploadingApprovedOrders = List.of(
+            DraftDirectionOrderCollection.builder().value(DraftDirectionOrder.builder().build()).build()
+        );
 
-        handler.handle(callbackRequest, AUTH_TOKEN);
+        FinremCaseData caseData = FinremCaseData.builder().build();
+        DraftDirectionWrapper draftDirectionWrapper = caseData.getDraftDirectionWrapper();
+        draftDirectionWrapper.setJudgeApprovedOrderCollection(uploadingApprovedOrders);
+        FinremCaseDetails finremCaseDetails = FinremCaseDetails.builder()
+            .id(Long.valueOf(CASE_ID))
+            .caseType(CaseType.CONTESTED)
+            .state(State.SCHEDULING_AND_HEARING)
+            .data(caseData).build();
+        FinremCallbackRequest callbackRequest = FinremCallbackRequest.builder()
+            .eventType(EventType.JUDGE_DRAFT_ORDER)
+            .caseDetails(finremCaseDetails)
+            .build();
 
-        verify(hearingOrderService).convertLastJudgeApprovedOrderToPdfAndStampAndStoreLatestDraftHearingOrder(any(), eq(AUTH_TOKEN));
-        verify(uploadedDraftOrderCategoriser).categorise(any(FinremCaseData.class));
-        verify(contestedOrderApprovedLetterService).generateAndStoreContestedOrderApprovedLetter(any(FinremCaseDetails.class), eq(AUTH_TOKEN));
-        verify(documentWarningsHelper).getDocumentWarnings(eq(callbackRequest), any(Function.class), eq(AUTH_TOKEN));
-        verifyNoInteractions(genericDocumentService); // Ensure no unnecessary document conversions
+        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> response = handler.handle(callbackRequest, AUTH_TOKEN);
+
+        FinremCaseData result = response.getData();
+
+        assertThat(result.getDraftDirectionWrapper().getJudgeApprovedOrderCollection()).isNull();
+        assertThat(result.getDraftDirectionWrapper().getDraftDirectionOrderCollection()).isEqualTo(uploadingApprovedOrders);
     }
 
     @Test
-    void givenMultipleAdditionalDocuments_whenHandle_thenAllAdditionalDocumentsAreConvertedToPdf() {
-        CaseDocument document1 = CaseDocument.builder().documentFilename("additional doc 1.docx").build();
-        CaseDocument document2 = CaseDocument.builder().documentFilename("additional doc 2.docx").build();
-        CaseDocument pdfConverted1 = caseDocument(FILE_URL, "additional doc 1.pdf", FILE_BINARY_URL);
-        CaseDocument pdfConverted2 = caseDocument(FILE_URL, "additional doc 2.pdf", FILE_BINARY_URL);
+    void givenNoAdditionalDocsUploaded_whenHandle_thenNoAdditionalDocsProcessed() {
+        FinremCallbackRequest callbackRequest = setupTestDataWithoutAdditionalDocs();
 
-        when(genericDocumentService.convertDocumentIfNotPdfAlready(document1, AUTH_TOKEN, "123")).thenReturn(pdfConverted1);
-        when(genericDocumentService.convertDocumentIfNotPdfAlready(document2, AUTH_TOKEN, "123")).thenReturn(pdfConverted2);
+        handler.handle(callbackRequest, AUTH_TOKEN);
 
-        DocumentCollectionItem additionalDocument1 = DocumentCollectionItem.builder()
-            .value(document1)
-            .build();
-        DocumentCollectionItem additionalDocument2 = DocumentCollectionItem.builder()
-            .value(document2)
-            .build();
+        verifyExpectedInvocations(callbackRequest);
+        verifyNoInteractions(genericDocumentService); // Ensure no document conversions
+    }
 
-        FinremCallbackRequest callbackRequest = setupTestData(List.of(additionalDocument1, additionalDocument2));
+    @ParameterizedTest
+    @MethodSource
+    void givenAdditionalDocsUploaded_whenHandle_thenConvertAdditionalDocsToPdf(BiFunction<CaseDocument, CaseDocument, List<List<DocumentCollectionItem>>> builder) {
+        CaseDocument additionalDoc1 = caseDocument("additional doc 1.docx");
+        CaseDocument additionalDoc2 = caseDocument("additional doc 2.docx");
+        CaseDocument pdfConverted1 = caseDocument("additional doc 1.pdf");
+        CaseDocument pdfConverted2 = caseDocument("additional doc 2.pdf");
+        when(genericDocumentService.convertDocumentIfNotPdfAlready(additionalDoc1, AUTH_TOKEN, CASE_ID)).thenReturn(pdfConverted1);
+        when(genericDocumentService.convertDocumentIfNotPdfAlready(additionalDoc2, AUTH_TOKEN, CASE_ID)).thenReturn(pdfConverted2);
+
+        FinremCallbackRequest callbackRequest = setupTestData(builder.apply(additionalDoc1, additionalDoc2));
 
         GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> response = handler.handle(callbackRequest, AUTH_TOKEN);
 
         assertThat(response.getData().getDraftDirectionWrapper().getDraftDirectionOrderCollection())
-            .isNotEmpty()
             .extracting(DraftDirectionOrderCollection::getValue)
             .flatExtracting(DraftDirectionOrder::getAdditionalDocuments)
             .extracting(DocumentCollectionItem::getValue)
             .containsExactlyInAnyOrder(pdfConverted1, pdfConverted2);
-
-        verify(genericDocumentService, times(2)).convertDocumentIfNotPdfAlready(any(CaseDocument.class),
-            any(String.class), any(String.class));
-        verify(uploadedDraftOrderCategoriser).categorise(any(FinremCaseData.class));
-        verify(hearingOrderService).convertLastJudgeApprovedOrderToPdfAndStampAndStoreLatestDraftHearingOrder(
-            any(FinremCaseData.class), eq(AUTH_TOKEN));
-        verify(contestedOrderApprovedLetterService).generateAndStoreContestedOrderApprovedLetter(any(FinremCaseDetails.class), eq(AUTH_TOKEN));
+        verifyExpectedInvocations(callbackRequest, additionalDoc1, additionalDoc2);
     }
 
-    private FinremCallbackRequest setupTestData(List<DocumentCollectionItem> additionalDocuments) {
-        CaseDocument caseDocument = caseDocument(FILE_URL, FILE_NAME, FILE_BINARY_URL);
+    private static Stream<Arguments> givenAdditionalDocsUploaded_whenHandle_thenConvertAdditionalDocsToPdf() {
+        return Stream.of(
+            Arguments.of(
+                (BiFunction<CaseDocument, CaseDocument, List<List<DocumentCollectionItem>>>)
+                    (add1, add2) -> List.of(
+                        List.of(
+                            DocumentCollectionItem.builder().value(add1).build(),
+                            DocumentCollectionItem.builder().value(add2).build()
+                        )
+                    ),
+                (BiFunction<CaseDocument, CaseDocument, List<List<DocumentCollectionItem>>>)
+                    (add1, add2) -> List.of(
+                        List.of(
+                            DocumentCollectionItem.builder().value(add1).build(),
+                            DocumentCollectionItem.builder().value(add2).build()
+                        ),
+                        List.of()
+                    ),
+                // making sure additional docs are converted to PDF in multiple uploaded approved orders condition
+                (BiFunction<CaseDocument, CaseDocument, List<List<DocumentCollectionItem>>>)
+                    (add1, add2) -> List.of(
+                        List.of(
+                            DocumentCollectionItem.builder().value(add1).build()
+                        ),
+                        List.of(
+                            DocumentCollectionItem.builder().value(add2).build()
+                        )
+                    )
+            )
+        );
+    }
 
-        //Create direction order with additional documents (if any)
-        DraftDirectionOrder directionOrder =
-            DraftDirectionOrder.builder()
-                .purposeOfDocument("test")
-                .uploadDraftDocument(caseDocument)
-                .additionalDocuments(additionalDocuments)
-                .build();
+    private void verifyExpectedInvocations(FinremCallbackRequest callbackRequest, CaseDocument... additionalDocs) {
+        FinremCaseDetails finremCaseDetails = callbackRequest.getCaseDetails();
+        FinremCaseData finremCaseData = finremCaseDetails.getData();
+        for (CaseDocument additionalDoc : additionalDocs) {
+            inOrder.verify(genericDocumentService).convertDocumentIfNotPdfAlready(additionalDoc, AUTH_TOKEN, CASE_ID);
+        }
+        inOrder.verify(hearingOrderService).stampAndStoreJudgeApprovedOrders(finremCaseData, AUTH_TOKEN);
+        inOrder.verify(contestedOrderApprovedLetterService).generateAndStoreContestedOrderApprovedLetter(finremCaseDetails, AUTH_TOKEN);
+        inOrder.verify(uploadedDraftOrderCategoriser).categorise(finremCaseData);
+    }
 
-        DraftDirectionOrderCollection directionOrderCollection = DraftDirectionOrderCollection.builder().value(directionOrder).build();
+    private FinremCallbackRequest setupTestDataWithoutAdditionalDocs() {
+        return setupTestData(Collections.singletonList(null));
+    }
 
-        //Set up draft direction order collection list
+    private FinremCallbackRequest setupTestData(List<List<DocumentCollectionItem>> additionalDocuments) {
         List<DraftDirectionOrderCollection> draftDirectionOrderCollection = new ArrayList<>();
-        draftDirectionOrderCollection.add(directionOrderCollection);
+        additionalDocuments.forEach(entry -> {
+            //Create direction order with additional documents (if any)
+            DraftDirectionOrder directionOrder =
+                DraftDirectionOrder.builder()
+                    .purposeOfDocument("test")
+                    .uploadDraftDocument(caseDocument())
+                    .additionalDocuments(entry)
+                    .build();
+            //Set up draft direction order collection list
+            draftDirectionOrderCollection.add(DraftDirectionOrderCollection.builder().value(directionOrder).build());
+        });
 
         FinremCaseData caseData = FinremCaseData.builder().build();
         DraftDirectionWrapper draftDirectionWrapper = caseData.getDraftDirectionWrapper();
         draftDirectionWrapper.setJudgeApprovedOrderCollection(draftDirectionOrderCollection);
 
         FinremCaseDetails finremCaseDetails = FinremCaseDetails.builder()
-            .id(123L)
+            .id(Long.valueOf(CASE_ID))
             .caseType(CaseType.CONTESTED)
             .state(State.SCHEDULING_AND_HEARING)
             .data(caseData).build();
